# FreeEQ8

./: .gitignore  0001-docs-add-2.4-5-DOF-framework-update-9.1-future-work-.patch  0001-docs-add-Further-Reading-section-with-honorable-ment.patch  0001-docs-add-RBJ-2001-phase-vocoder-paper-as-ref-15-note.patch  0001-docs-add-refs-17-20-fix-per-feature-academic-gaps.patch  0001-fix-add-inline-citations-for-refs-2-3-4-5-were-defin.patch  0001-fix-clarify-2.3-closing-sentence-exact-gain-at-fc-is.patch  0001-fix-correct-all-false-DSP-claims-SVF-does-not-decram.patch  0001-fix-correct-all-false-DSP-claims-identified-in-JUCE-.patch  AUDIT.md  ArcBenchIntegration.cpp  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CompetitiveBench.cpp  Config.h  DAFx26_FreeEQ8.tex  DAFx26_FreeEQ8_SUBMIT.tex  DAFx26_SIMPLE.tex  DAFx26_STANDALONE.tex  DISTRIBUTION.md  EQBand.h  FeatureBench.cpp  LICENSE  MatchEQ.h  NaturalPhaseEngine.h  PAPER.md  PluginBenchTemplate.cpp  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  PreRingAnalysis  README.md  ROADMAP_2_5_PLUS.md  RealWorldDetectorEval  ResponseCurveComponent.cpp  ResponseCurveComponent.h  (+11 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tester-feedback.yml
.github/workflows/: latex.yml  pages.yml  release.yml
Source/: Config.h  LicenseValidator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UpdateChecker.h
Source/DSP/: Biquad.h  EQBand.h  FrequencyExplainer.h  IntentMode.h  LinearPhaseEngine.h  MatchEQ.h  ResonanceDetector.h  SpectrumFIFO.h  SvfBandArray.h  SvfBiquad.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/UI/: LevelMeter.h  ResponseCurveComponent.cpp  ResponseCurveComponent.h
Tests/: ABXAnalysis.py  ABXListeningTest.cpp  AuditBench.cpp  AuditRegressionTest.cpp  BiquadTest.cpp  BiquadVsSvfComparison.cpp  CadenceBench.cpp  CompetitiveBench.cpp  DetectorEvalTest.cpp  DetectorROC.py  EngineIsolationTest.cpp  FeatureBench.cpp  GenerateSpectrograms.py  PluginBenchTemplate.cpp  PreRingAnalysis.cpp  RealWorldDetectorEval.cpp  ResponsePlotTest.cpp  SvfTest.cpp  response_data.csv
Tests/data/: detector_results.csv  ground_truth.json
Tests/detector_plots/: evaluation_summary.txt
docs/: CHECKOUT_DEPLOY.md  COMPETITIVE_ANALYSIS.md  DETECTOR_EVALUATION.md  FEATURED_ON.md  LISTENING_STUDY_PROTOCOL.md  MILESTONE_A_REPORT.md  PRERING_ANALYSIS.md  RELEASE_v2.2.0.md  SECURITY_AUDIT_2026-05-28.md  SEO_CRAWLER_CONSISTENCY.md  SMART_EQ_LAYER.md  SUBMISSIONS_2026.md  index.html
docs/outreach/: CROSSCHECKED_SUBMISSION_STATUS_2026-05-21.md  EMAIL_VALIDATION_AUDIT_2026-05-21.md  FREEEQ8_INDEXING_WAVE_2026.md  FREEEQ8_TESTER_POSTS.md  LAUNCH_PLATFORMS_2026.md  OUTREACH_EMAIL_TEMPLATES_2026.md
docs/outreach/api-publishing/: FREEEQ8_DAFX26_POST.md  FREEEQ8_DEVTO_POST.md
docs/press/: AUDIOAPP_CN_COVERAGE.md  MIDIFAN_COVERAGE.md
docs/testing/: PUBLIC_FEEDBACK_CHANNELS_2026.md  TESTER_CALL.md  TEST_MATRIX.md
mnt/user-data/outputs/FreeEQ8_dropin/paper/: README.md
mnt/user-data/outputs/final_dropin/paper/: README.md
paper/: DAFx26_FreeEQ8.tex  DISTRIBUTION.md  README.md  UPLOAD_INSTRUCTIONS.md  build.sh
paper/arxiv/: main.tex
paper/dafx_submit/: DAFx26_FreeEQ8_SUBMIT.tex  DAFx26_SIMPLE.tex  DAFx26_STANDALONE.tex  IEEEtranDAFx.bst  README.md  dafx26demo.sty
scripts/: seo_consistency_check.py
scripts/outreach/: publish_devto_freeeq8.py
server/: package-lock.json  package.json  stripe-webhook.js  test-activation.js  wrangler.toml
server/pages/proeq8/: checkout.js  index.html  styles.css  success.html
